--- a/index.html
+++ b/index.html
@@ -1,9 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
-    <meta charaset="utf-8" />
+    <meta charset="utf-8" />
     <link rel="stylesheet" href="styles.css" />
-    <titie>1-7演習問題</titie>
+    <title>1-7演習問題</title>
   </head>
-  <body></body>
+
+  <body>
+    <header>
+      <div class="main-visual">
+        <h1 class="text">サービス紹介</h1>
+      </div>
+    </header>
+
+    <main>
+      <section class="course">
+        <div class="course-box1">
+          <img class="course-item" src="img/wc-logo.png">
+          <div>マンツーマンサポートによる学習で、<br>
+            確実にWebスキルを習得できるプログラミングスクールです
+          </div>
+          <a href="https://web-camp.io/">webサイト</a>
+        </div>
+        <div class="course-box2">
+          <img class="course-item" src="img/wcp-logo.png">
+          <div>未経験から転職を保証する<br>
+            日本で唯一のプログラミングスクールです。
+          </div>
+          <a href="https://web-camp.io/">webサイト</a>
+        </div>
+        <div class="course-box3">
+          <img class="course-item" src="img/wcw-logo.png">
+          <div>家庭も仕事も頑張りたい主婦・ママ向けの、<br>
+            １ヶ月でWebサイトを制作するWebデザインスクールです。
+          </div>
+          <a href="https://web-camp.io/">webサイト</a>
+        </div>
+        <div class="course-box4">
+          <img class="course-item" src="img/wcc-logo.png">
+          <div>3000名のエンジニアをサポートしてきたエージェントが<br>
+            あなたの転職をサポート
+          </div>
+          <a href="https://web-camp.io/">webサイト</a>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="space"></div>
+    </footer>
+  </body>
 </html>
